Fix shorten not properly formatting links